index.css
@font-face {
    font-family: 'League Spartan';
    src: url('fonts/subset-LeagueSpartan-Bold.eot');
    src: url('fonts/subset-LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype'),
        url('fonts/subset-LeagueSpartan-Bold.woff') format('woff'),
        url('fonts/subset-LeagueSpartan-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

.wrapper {
    width: 1225px;
    margin: 0 auto;
    padding: 0 10px;
}

/* Header styling */

.header {
    margin-top: 38px;
    padding-bottom: 43px;
}

.header__logo {
    margin-right: 192px;
}

.font-primary {
    font-family:  "League Spartan", Arial, Tahoma, sans-serif;
}

.navigation {
    display: inline-block;
}

.navigation__list {
    padding: 13px 0;
    margin: 0;
}

.navigation__item {
    list-style-type: none;
    display: inline-block;
    margin-right: 43px;
}

.navigation__item:last-child {
    margin-right: 0;
}

.navigation__link {
    font-size: 9px;
    opacity: 0.9;
    color: #0b0c11;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 5px;
    height: 100%;

}

.navigation__link:hover {
    color: #5da8ef;
}

/* section primary-slider */

.primary-slider {
    position: relative;
}

.primary-slider__content {
    position: absolute;
    transform: translateY(-50%);
    top: 50%;
    width: 100%;
}

.primary-slider__subtitle {
    opacity: 0.9;
    color: #5da8ef;
    font-size: 9px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 6px;
}

.primary-slider__title {
    margin: 0;
    color: #0b0c11;
    font-size: 62px;
    font-weight: 700;
    padding-top: 11px;
    padding-bottom: 13px;
    line-height: 64px;
}

.primary-slider__paragraph {
    width: 32%;
    color: #8f8f8f;
    font-size: 14px;
    font-weight: 300;
    line-height: 24px;
    margin: 0;
    padding: 0;
}

.primary-slider__image {
    box-shadow: -7px 19px 20px 5px #d9d9d9;
}

.slider-controls {
    position: absolute;
    bottom: 3px;
}

.slider-controls__pages {
    color: #ebebeb;
    font-size: 10px;
    font-weight: 700;
    line-height: 37px;
    text-transform: uppercase;
}

.slider-controls__page {
    color: #262626;
}

.slider-controls__page--active {
    color: #5da8ef;
}

.slider-controls__left-arrow {
    margin-right: 15px;
    cursor: pointer;
    padding: 7px;
}

.slider-controls__left-arrow:hover > path,
.slider-controls__right-arrow:hover > path {
    fill: #5da8ef;
}

.slider-controls__right-arrow {
    margin-left: 15px;
    cursor: pointer;
    padding: 7px;
}

.font-secondary {
    font-family: "Playfair Display", "Times New Roman", serif;
}

.font-tertiary {
    font-family: "Poppins", Arial, Tahoma, sans-serif;
}

/* social-bar section */

.social-bar {
    position: absolute;
    left: 83%;
    top: 175px;
    width: 19px;
    height: 568px;
}

.social-bar__title {
    opacity: 0.2;
    text-transform: uppercase;
    font-size: 9px;
    color: #0b0c11;
    font-weight: 700;
    letter-spacing: 6px;
    -ms-transform: rotate(7deg); /* IE 9 */
    -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
    transform: rotate(-90deg);
    transform-origin: left top 0;
    position: absolute;
    width: 259px;
}

.social-icons {
    padding-top: 350px;
    position: absolute;
}

.social-icons > a {
    text-decoration: none;
    display: block;
}



.left {float: left;}
.right {float: right;}

/* https://css-tricks.com/snippets/css/clear-fix/ */
.group:after {
    content: "";
    display: table;
    clear: both;
}

